syntax = "proto3";

package applet.v2;
option go_package = "applet-server/api/v2/applet";


import "google/api/annotations.proto";
import "validate/validate.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/empty.proto";


service  Feedback {
  rpc Collect(CollectReq) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/api/v2/feedback/collect"
      body: "*"
    };
  }
  rpc CollectLike(CollectLikeReq) returns (google.protobuf.Empty){
    option (google.api.http) = {
      post: "/api/v2/feedback/collect_like"
      body: "*"
    };
  }
  rpc CollectDislike(CollectDislikeReq) returns (google.protobuf.Empty){
    option (google.api.http) = {
      post: "/api/v2/feedback/collect_dislike"
      body: "*"
    };
  }
}
enum QAType {
  CommonQA =  0;
  UserQA   =  1;
}

message  CollectReq {
  int32  agent_id = 1;
  string language = 2;
  string question = 3;
  string answer = 4;
  QAType qa_type = 5;
}

message  CollectLikeReq {
  int32  agent_id = 1;
  string  language = 2;
  string question = 3;
  string answer = 4;
  string intent = 5;
  message Entity{
    string name = 1;
    string value = 2;
    string type = 3;
    string before_value = 4;
  }
  string question_id = 6;
  repeated Entity entities = 7;
  string source = 8;
  string  domain = 9;
  Env_Type env_type = 10;
  string session_id = 11;
}

enum BugType {
  unknown =  0;
  ASR =  1;
  NLP =  2;
  TTS =  3;
  Other = 4;
}

message CollectDislikeReq {
  string question_id = 1;
  Env_Type env_type =  2;
  int32  agent_id = 3;
  string language = 4;
  string question = 5;
  string answer = 6;
  string intent = 7;
  string expectation = 8;
  string reality = 9;
  BugType bug_type = 10;
  string  bug_desc = 11;
  string  session_id = 12;
}

enum Env_Type {
  m8 = 0;
  fit86 = 1;
  prod251 = 2;
  prod85 = 3;
  fit87 = 4;
  sit134 = 5;
}


